# oz_01_collabo-005

./: .gitignore  .gitmessage.txt  Jenkinsfile  README.md  docker-compose.yml
.github/: pull_request_template.md
backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  env-for-sharing  nginx.conf  pyproject.toml  runserver.sh  test.sh
backend/app/activity/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/app/album/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/app/board/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/app/category/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/app/club/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/app/comment/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/app/common/: admin.py  apps.py  utils.py  views.py
backend/app/community/: models.py
backend/app/user/: adapters.py  admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/app/users/: admin.py  apps.py  models.py  urls.py
backend/mysite/: settings.py  urls.py
backend/mysite/settings/: base.py  logging.py
backend/users/: admin.py  models.py
frontend/: .eslintrc.cjs  .gitignore  Test.js  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.js  App.tsx  index.js  main.tsx
frontend/src/Apis/: axios.ts  logins.tsx
frontend/src/Components/: Deletemember.css  Deletemember.tsx  Footer.css  Footer.tsx  Getaccess.tsx  Selectbox.tsx  Topnav.css  Topnav.tsx
frontend/src/Components/Nationoption/: Option.ts  Selectbox.tsx
frontend/src/Components/Nav/: Nav.css  Nav.tsx
frontend/src/Context/: Authuser.tsx  Handleimgchange.tsx  Token.tsx
frontend/src/Pages/Boardwrite/: Onclickboard.tsx  index.css  index.tsx
frontend/src/Pages/Clubcategory/: index.css  index.tsx
frontend/src/Pages/Clubuserlist/: index.tsx
frontend/src/Pages/Createboard/: index.css  index.tsx
frontend/src/Pages/Createmeet/: index.css  index.tsx
frontend/src/Pages/Createschedules/: index.css  index.tsx
frontend/src/Pages/FeedScreen/: CommentList.css  Commentfunc.css  Commentfunc.tsx  WriterInfo.css  WriterInfo.tsx  index.css  index.tsx
frontend/src/Pages/Join/: Index.tsx
frontend/src/Pages/Login/: index.css  index.tsx
frontend/src/Pages/Main/: Categoryicons.css  Categoryicons.tsx  Index.css  Index.tsx  Moveimages.css  Moveimages.tsx  NewPost.tsx  Newpost.css  index.css  index.tsx  moveimages.css  newpost.tsx
frontend/src/Pages/Meet/: Index.tsx  index.css  index.tsx
frontend/src/Pages/Meethome/: Album.css  Album.tsx  Home.css  Home.tsx  HomeMember.css  HomeMember.tsx  MemberList.css  MemberList.tsx  NoticeBoard.css  NoticeBoard.tsx  NoticeBox.tsx  Schedule.css  Schedule.tsx  ScheduleBox.tsx  index.css  index.tsx
frontend/src/Privateroute/: Privateroute.tsx
frontend/src/Type/: Club.d.ts  Meethome.d.ts  User.d.ts  vite-env-d.ts
(+21 files in other folders)
